# Revenix

./: .gitignore  DEPLOYMENT.md  README.md  check_db.sh  cleanup.sh  delete.sh  docker-compose.yml  fresh-start.sh  reset.sh  start-revenix.py  traf.sh  verify.sh
agents/: README.md
agents/linux/: Dockerfile.firewall  README.md  agent.env.example  firewall-sync.py  install.sh  start-agent.sh  uninstall.sh
agents/windows/: README.md  agent.env.example  bootstrap-install.ps1  control-agent.ps1  firewall-sync.ps1  install-agent.ps1  install.cmd  restart.cmd  start-agent.ps1  start.cmd  status.cmd  stop.cmd  uninstall-agent.ps1  uninstall.cmd
api/: Dockerfile  db.py  main.py  redis_consumer.py  requirements.txt
api/app/: alerting_dispatch.py  api.py  database.py  db_utils.py  rate_limiter.py  simple_auth.py  websocket_broadcast.py
brain/: Dockerfile  main.py  pytest.ini  requirements-test.txt  requirements.txt
brain/app/: anomaly_detector.py  api.py  auth.py  auto_learner.py  autoencoder_detector.py  baseline_tracker.py  device_profiler.py  ensemble_engine.py  features.py  feedback_loop.py  firewall_manager.py  firewall_sync.py  internal_api.py  (+9 more)
core/: Cargo.toml  Dockerfile
core/data/: ja3_malware_db.json
core/scripts/: build-linux-agent.ps1  build-windows-agent.ps1
core/src/: dpi_analyzer.rs  flows.rs  main.rs
dashboard/: Dockerfile  jest.config.json  jest.setup.ts  next.config.js  package.json  pnpm-lock.yaml
docs/: NOIT_AI_Robotics_Documentation_BG.md  architecture.md  getting-started.md  index.md  mkdocs.yml  troubleshooting.md  windows-agent.md
(+50 files in other folders)
