[package]
name = "revenix-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
pcap = "1"
redis = "0.23"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
hostname = "0.3"
reqwest = { version = "0.11", features = ["json"] }
etherparse = "0.14"
chrono = "0.4"
md5 = "0.7"
